test/deriver/errors/unsupported_type_polyvariant.expected
File "_none_", line 1:
Warning 46: illegal environment variable OCAML_COLOR : expected "auto", "always" or "never"
File "unsupported_type_polyvariant.ml", line 1, characters 0-42:
1 | type t = [ `On | `Off ] [@@deriving irmin]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: ppx_irmin: polymorphic variant [ `On  | `Off ] encountered. Polymorphic variants are not Irmin-serialisable.
